// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ColorPreview renders, with RGB and CMYK when provided 1`] = `
<figure>
  <svg
    className={null}
  >
    <rect
      fill="#test"
      height="100%"
      width="100%"
    />
  </svg>
  <figcaption>
    test
    <br />
    <small>
      Hex color code: 
      #test
    </small>
    <br />
    <small>
      RGB color code: 
      test,test,test
    </small>
    <br />
    <small>
      CMYK color code: 
      test/test/test/test
    </small>
  </figcaption>
</figure>
`;

exports[`Component: ColorPreview renders, without RGB and CMYK when not provided 1`] = `
<figure>
  <svg
    className={null}
  >
    <rect
      fill="#test"
      height="100%"
      width="100%"
    />
  </svg>
  <figcaption>
    test
    <br />
    <small>
      Hex color code: 
      #test
    </small>
  </figcaption>
</figure>
`;
